--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
         </header>
 
         <div class="cds-container container" id="app">
-            <!-- Disco ad esempio -->
-            <div class="cd" v-for="disco in dischi">
+          <select  @change="changeItem($event)">
+            <option v-for="genere in generi" :value="genere">
+              {{ genere }}
+            </option>
+          </select>
+            <div class="cd" v-for="disco in selectedDischi">
                 <img :src="disco.poster" alt="Poster">
                 <h3>{{ disco.title }}</h3>
                 <span class="author">{{ disco.author }}</span>
